--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,6 @@
+<!-- FIXME: Update page title. -->
+<!-- FIXME: Add emoticon to go with page title. -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Loss For Words</title>
 </head>
 
 <body>
